--- a/style.css
+++ b/style.css
@@ -1,3 +1,8 @@
+.column {
+  position: relative;
+  width: 100%;
+}
+
 .quote, .author {
   background-color: antiquewhite;
   color: #222;
@@ -29,10 +34,68 @@
 .menu-item {
   padding: 15px;
   border: 1px solid transparent;
+  letter-spacing: 0.02em;
 }
 
 .menu-item:hover {
   border-top: 1px solid #00cd1d;
   border-bottom: 1px solid #00cd1d;
   color: #1853ff;
+}
+
+.active-item {
+  border-top: 1px solid #1853ff;
+  border-bottom: 1px solid #1853ff;
+  color: #1853ff;
+  background-color: aliceblue;
+}
+
+.section-title {
+  margin-bottom: 40px;
+  margin-top: 20px;
+  text-transform: uppercase;
+  font-weight: 300;
+  letter-spacing: 0.05em;
+  color: #1853ff;
+  text-align: center;
+}
+
+.main-title {
+  padding-bottom: 15px;
+  border-bottom: 1px solid #00cd1d;
+  width: 75%;
+  margin: 20px auto;
+}
+
+.about-staff {
+  margin-right: 10%;
+  margin-left: 10%;
+  margin-top: 20px;
+  margin-bottom: 20px;
+  padding: 15px;
+  background-color: aliceblue;
+  border-radius: 5px;
+}
+
+.img-staff {
+  width: 100%;
+  border-radius: 4px;
+}
+
+.staff-title {
+  font-weight: 400;
+  font-size: 1.3rem;
+  border-bottom: 1px dashed #ffe118;
+  padding-bottom: 7px;
+}
+
+.row-margin {
+  margin-right: 10%;
+  margin-left: 10%;
+}
+
+footer {
+  padding: 20px 0px 15px 0px;
+  font-size: smaller;
+  background-color: #f8f9fa;
 }
