--- a/style.css
+++ b/style.css
@@ -9,7 +9,6 @@
   padding: 4px 8px;
   border-radius: 5px;
   font-style: italic;
-  font-size: 1rem;
 }
 
 .author {
@@ -97,6 +96,7 @@
 
 .img, .img-left, .img-right {
   max-width: 400px;
+  width: 100%;
   margin: 3px 10px;
   border: 5px solid #e6f3ff;
   padding: 3px;
@@ -155,4 +155,33 @@ footer {
   background-color: #f8f9fa;
   margin-top: 20px;
   border-top: 1px solid #dae0e5;
+}
+
+@media screen and (max-width: 576px) {
+  .carousel-indicators {
+    display: none;
+  }
+  .carousel-caption {
+    margin-bottom: 0px;
+  }
+  .carousel-caption p {
+    margin-bottom: 0.2rem;
+  }
+  .quote, .author {
+    font-size: 0.7rem;
+    padding: 3px 7px;
+  }
+  .author {
+    font-size: 0.5rem;
+    padding: 2px 6px;
+  }
+  .carousel-caption {
+    padding-bottom: 0px;
+    left: 7%;
+    right: 7%;
+    bottom: 2px;
+  }
+  h1 {
+    font-size: 2rem;
+  }
 }
