--- a/style.css
+++ b/style.css
@@ -1,3 +1,16 @@
+a {
+  color: #006ee4;
+}
+
+.btn-info {
+  background-color: #128091;
+  border-color: #128091;
+}
+
+.btn-info:hover {
+  background-color: #0e626f;
+}
+
 .column {
   position: relative;
   width: 100%;
@@ -119,8 +132,12 @@
   color: inherit;
 }
 
+.services {
+  background-color: #128091;
+}
+
 .services:hover {
-  background-color: #138496;
+  background-color: #0e626f;
 }
 
 .social-icons {
