--- a/style.scss
+++ b/style.scss
@@ -184,50 +184,6 @@ footer {
     border-top: 1px solid darken($footer-color, 10%)
 }
 
-@media screen and (max-width: 576px) {
-    .carousel-indicators {
-        display: none;
-    }
-    .carousel-caption {
-        margin-bottom: 0px;
-    }
-
-    .carousel-caption p {
-        margin-bottom: 0.2rem;
-    }
-
-    .quote {
-        font-size: 0.7rem;
-        padding: 3px 7px;
-    }
-
-    .author {
-        font-size: 0.5rem;
-        padding: 2px 6px;
-    }
-
-    .carousel-caption {
-        padding-bottom: 0px;
-        left: 7%;
-        right: 7%;
-        bottom: 2px;
-    }
-
-    .row-margin {
-        margin-right: 3%;
-        margin-left: 3%;
-    }
-
-    .img {
-        margin: 0;
-    }
-
-    h1 {
-        font-size: 2rem;
-    }
-
-}
-
 #slidebox {
     width: 230px;
     height: 170px;
@@ -284,4 +240,62 @@ footer {
 
 #close {
     cursor: pointer;
+}
+
+
+@media screen and (max-width: 576px) {
+    .carousel-indicators {
+        display: none;
+    }
+    .carousel-caption {
+        margin-bottom: 0px;
+    }
+
+    .carousel-caption p {
+        margin-bottom: 0.2rem;
+    }
+
+    .quote {
+        font-size: 0.7rem;
+        padding: 3px 7px;
+    }
+
+    .author {
+        font-size: 0.5rem;
+        padding: 2px 6px;
+    }
+
+    .carousel-caption {
+        padding-bottom: 0px;
+        left: 7%;
+        right: 7%;
+        bottom: 2px;
+    }
+
+    .row-margin {
+        margin-right: 3%;
+        margin-left: 3%;
+    }
+
+    .img {
+        margin: 0;
+    }
+
+    h1 {
+        font-size: 2rem;
+    }
+
+    .owl-theme .owl-dots .owl-dot {
+        display: none;
+    }
+
+    .owl-carousel .owl-nav button.owl-prev {
+        font-size: 50px;
+        margin-right: 10px;
+    }
+
+    .owl-carousel .owl-nav button.owl-next {
+        font-size: 50px;
+        margin-left: 10px;
+    }
 }
