--- a/style.css
+++ b/style.css
@@ -45,15 +45,25 @@ a {
 }
 
 .menu-item {
-  padding: 15px;
+  padding: 5px 15px;
   border: 1px solid transparent;
   letter-spacing: 0.02em;
 }
 
-.menu-item:hover {
-  border-top: 1px solid #00cd1d;
+.menu-item:after, .menu-item:before {
+  display: block;
+  content: '';
   border-bottom: 1px solid #00cd1d;
-  color: #1853ff;
+  transform: scaleX(0);
+  transition: transform 0.3s ease-in-out;
+}
+
+.menu-item:hover:after, .menu-item:hover:before {
+  transform: scaleX(1);
+}
+
+.nav-link {
+  padding: 1rem;
 }
 
 .active-item {
@@ -196,6 +206,30 @@ footer {
 .call-icon:hover {
   animation: shake 0.5s;
   animation-iteration-count: 2s;
+}
+
+.animate {
+  animation-duration: 0.7s;
+  animation-fill-mode: both;
+}
+
+@keyframes slideIn {
+  0% {
+    transform: translateY(2rem);
+    opacity: 0;
+  }
+  100% {
+    transform: translateY(0rem);
+    opacity: 1;
+  }
+  0% {
+    transform: translateY(2rem);
+    opacity: 0;
+  }
+}
+
+.slideIn {
+  animation-name: slideIn;
 }
 
 @keyframes shake {
