--- a/style.css
+++ b/style.css
@@ -11,10 +11,30 @@ a {
   background-color: #0e626f;
 }
 
+
+/*
 .column {
   position: relative;
   width: 100%;
 }
+*/
+
+
+/* Three image containers (use 25% for four, and 50% for two, etc) */
+.column {
+  float: left;
+  width: 33.33%;
+  padding: 5px;
+}
+
+/* Clear floats after image containers */
+.row::after {
+  content: "";
+  clear: both;
+  display: table;
+}
+
+
 
 .quote, .author {
   background-color: antiquewhite;
