--- a/style.scss
+++ b/style.scss
@@ -1,5 +1,5 @@
-$main-theme-color: #1853ff;
-$secondary-theme-color: #00cd1d;
+$main-theme-color: #012a57;
+$secondary-theme-color: #38343d;
 $tertiary-theme-color: #ffe118;
 $main-theme-color-lighter: aliceblue;
 $footer-color: #f8f9fa;
