--- a/style.scss
+++ b/style.scss
@@ -9,6 +9,18 @@ a {
     color: #006ce0;
 }
 
+
+
+div.container {
+      display:inline-block;
+    }
+
+p {
+      text-align:center;
+    }
+
+
+
 .btn-info {
     background-color: $info-color;
     border-color: $info-color;
@@ -147,6 +159,12 @@ a {
     @extend .img;
     float: right;
 }
+
+.img-center {
+    @extend .img;
+    float: center;
+}
+
 
 .services-link {
     color: inherit;
