--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
-a {
-  color: #012a57;
+a { font-family: Baskerville, "Baskerville Old Face", "Hoefler Text", Garamond, "Times New Roman", serif; 
+  font-size: 24px; font-style: normal; font-variant: normal; font-weight: 700; line-height: 26.4px; }
 }
 
 
