--- a/style.css
+++ b/style.css
@@ -3,8 +3,12 @@ a {
 }
 
 span {
- font-family: Baskerville, "Baskerville Old Face", "Hoefler Text", Garamond, "Times New Roman", serif; 
-  font-size: 24px; font-style: normal; font-variant: normal; font-weight: 700; line-height: 26.4px; 
+ font-family: Baskerville;
+  font-size: 24px; 
+  font-style: normal; 
+  font-variant: normal; 
+  font-weight: 700; 
+  line-height: 26.4px; 
 }
 
 
