--- a/style.css
+++ b/style.css
@@ -3,8 +3,7 @@ a {
 }
 
 span {
- font-family: Baskerville;
-  font-size: 24px; 
+  font-size: larger; 
   font-style: normal; 
   font-variant: normal; 
   font-weight: 700; 
