--- a/style.css
+++ b/style.css
@@ -300,7 +300,7 @@ footer {
 }
 
 text {
-  color:red!important;
+  color:black;
   font-family: Baskerville!important;
   font-size: 50px!important;
 }
