--- a/style.css
+++ b/style.css
@@ -302,7 +302,7 @@ footer {
 text {
   color:black!important;
   font-family: Baskerville!important;
-  font-size: 50px!important;
+  font-size: xx-large!important;
 }
 
 .navbar-default {
