--- a/style.css
+++ b/style.css
@@ -323,4 +323,10 @@ text {
 
 
 
+h1 { font-family: Verdana, Geneva, sans-serif;}
+h3 { font-family: Verdana, Geneva, sans-serif;}
+p { font-family: Verdana, Geneva, sans-serif;}
+
+
+
 
