--- a/style.css
+++ b/style.css
@@ -323,9 +323,9 @@ text {
 
 
 
-h1 { font-family: Verdana, Geneva, sans-serif;}
-h3 { font-family: Verdana, Geneva, sans-serif;}
-p { font-family: Verdana, Geneva, sans-serif;}
+h1 { font-family: Verdana, Geneva, sans-serif; }
+h2, h3, h4, h5, h6, p { font-family: Verdana, Geneva, sans-serif; font-weight: normal;}
+
 
 
 
