--- a/style.css
+++ b/style.css
@@ -324,7 +324,7 @@ text {
 
 
 h1 { font-family: Verdana, Geneva, sans-serif; }
-h2, h3, h4, h5, h6, p { font-family: Verdana, Geneva, sans-serif; font-weight: normal;}
+h2, h3, h4, h5, h6, p { font-family: Verdana!important, Geneva, sans-serif; font-weight: normal!important;}
 
 
 
