--- a/style.css
+++ b/style.css
@@ -49,7 +49,7 @@ p {
   font-size: larger;
   margin: 0 auto;
   text-transform: uppercase;
-  float: left;
+  float: right;
   
 }
 
@@ -57,7 +57,7 @@ p {
   padding: 5px 15px;
   border: 1px solid transparent;
   letter-spacing: 0.02em;
-  float: left;
+  float: right;
 }
 
 .menu-item:after, .menu-item:before {
