--- a/style.css
+++ b/style.css
@@ -49,7 +49,7 @@ p {
   font-size: larger;
   margin: 0 auto;
   text-transform: uppercase;
-  float: left;
+  /*float: left;*/
   
 }
 
@@ -57,7 +57,7 @@ p {
   padding: 5px 15px;
   border: 1px solid transparent;
   letter-spacing: 0.02em;
-  float: left;
+  /*float: left;*/
 }
 
 .menu-item:after, .menu-item:before {
@@ -320,11 +320,6 @@ text {
 .vcenter {
   padding: 15% 0;
 }
-
-
-.dropdown-menu.pull-left {
-    left:100;
-  }
 
 
 
