--- a/style.css
+++ b/style.css
@@ -317,6 +317,12 @@ text {
   background-repeat: no-repeat;
  }
 
+
+.ml-auto .dropdown-menu {
+    left: auto !important;
+    right: 0px;
+}
+
 .vcenter {
   padding: 15% 0;
 }
